peac_dev/force-app/main/default/objects/Warehouse_Mapping__mdt/Warehouse_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>for the Recommended Warehouse work in SL-111</description>
    <label>Warehouse Mapping</label>
    <pluralLabel>Warehouse Mappings</pluralLabel>
</CustomObject>