peac_dev/force-app/main/default/objects/Warehouse_Mapping__mdt/fields/Residual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Amount__c</fullName>
    <description>leave empty so the process ignores this field</description>
    <label>Residual Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$749.99-</fullName>
                <default>true</default>
                <label>$749.99-</label>
            </value>
            <value>
                <fullName>$750.00+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>