peac_dev/force-app/main/default/objects/Warehouse_Mapping__mdt/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>