peac_dev/force-app/main/default/objects/Warehouse_Mapping__mdt/listViews/allWarehouses.listView-meta.xml
<ListView>
    <fullName>allWarehouses</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Warehouse__c</columns>
    <columns>Location__c</columns>
    <columns>Territory__c</columns>
    <columns>Residual_Amount__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>allWarehouses</label>
</ListView>